fix admin star badging on avatars when the container is taller than the avatar due to text wrapping.

--- a/src/main/resources/scss/profile/components/_avatar-grid.scss
+++ b/src/main/resources/scss/profile/components/_avatar-grid.scss
@@ -20,7 +20,7 @@
 				width: $badgesize;
 				height: $badgesize;
 				position: absolute;
-				bottom: 0;
+				top: $avatarsize - $badgesize + .1rem;
 				left: $avatarsize - $badgesize;
 				background-repeat: no-repeat;
 				background-size: $badgesize;
@@ -57,6 +57,7 @@
 				$badgesize: 1rem;
 				a::after {
 					left: $avatarsize - $badgesize - .1rem;
+					top: $avatarsize - $badgesize;
 				}
 			}
 
